@@ -25,6 +25,7 @@ t/Data-HTML-Form-Input/01-use.t
 t/Data-HTML-Form-Input/02-version.t
 t/Data-HTML-Form/01-use.t
 t/Data-HTML-Form/02-version.t
+t/Data-HTML-Form/03-new.t
 xt/Data-HTML-Form-Input/01-pod_coverage.t
 xt/Data-HTML-Form-Input/02-pod.t
 xt/Data-HTML-Form/01-pod_coverage.t
