@@ -1,4 +1,5 @@
 0.02
+ - Add constructor tests for Data::HTML::Form.
  - Fix dependencies.
 
 0.01 2022-09-12T16:15:26+02:00
